First IOS commit
first IOS

--- a/Tejas_IOS_Demo/Info.plist
+++ b/Tejas_IOS_Demo/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CleverTapAccountID</key>
+	<string>4WK-6WZ-Z76Z</string>
+	<key>CleverTapDisableIDFV</key>
+	<true/>
+	<key>CleverTapRegion</key>
+	<string>us1</string>
+	<key>CleverTapToken</key>
+	<string>TEST-106-304</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -21,5 +29,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
